# CBUtilLib

./: .clang-format  ArgUtils.c  ArgUtils.h  CMakeCache.txt  CMakeLists.txt  CSV.c  CSV.h  FileRWInt.c  FileRWInt.h  GMakefile  IntDict.c  IntDict.h  IntDictVIt.c  LinkedList.c  LinkedList.h  MakeCommon  Makefile  NMakefile  Optional.h  PtrDict.h  README.md  StrDict.c  StrDict.h  StrDictVIt.c  StrExtra.h  StrInflate.c  StrTail.c  Strdup.c  Stricmp.c  StringBuf2.c  StringBuf3.c  StringBuff.c  StringBuff.h  Strnicmp.c  TrigTable.c  TrigTable.h
.github/workflows/: cmake-multi-platform.yml
Internal/: CBUtilMisc.h
tests/: ArgTest.c  CMakeLists.txt  CSVTest.c  GMakefile  IntDicTest.c  ListTest.c  Main.c  MakeCommon  Makefile  NMakefile  PtrDicTest.c  RWIntTest.c  StrBufTest.c  StrDicTest.c  StrExtTest.c  StrInfTest.c  Tests.h  TrigTbTest.c
